# pqctoday-tpm

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  xcheck.yml
docker/: Dockerfile.dev  Dockerfile.xcheck  build.sh
docs/: TPMdocextract.md  architecture.md  implementation-plan.md  v185-compliance.md  wasm-integration.md
docs/standards/: README.md
docs/upstream-issues/: wolfSSL-build-notes.md  wolfTPM-001-mlkem-header-rename.md
libtpms/src/: Makefile.am  tpm_library_conf.h
libtpms/src/tpm2/: CommandAttributeData.h  CommandDispatchData.h  CryptUtil.c  Decapsulate_fp.h  EACommands.c  Encapsulate_fp.h  Entity.c  Global.h  HashCommands.c  InternalRoutines.h  Marshal.c  Marshal_fp.h  NVDynamic.c  NVMarshal.c  Object.c  Object_spt.c  PqcKemCommands.c  PqcMlDsaCommands.c  PqcSequence.c  PqcSequenceCommands.c  PqcSequence_fp.h  PropertyCap.c  RuntimeAlgorithm.c  RuntimeCommands.c  RuntimeProfile.c  SessionProcess.c  SignDigest_fp.h  SignSequenceComplete_fp.h  SignSequenceStart_fp.h  SigningCommands.c  Ticket.c  TpmAlgorithmDefines.h  TpmProfile_CommandList.h  TpmProfile_Common.h  TpmProfile_Misc.h  TpmTypes.h  Unmarshal.c  Unmarshal_fp.h  VerifyDigestSignature_fp.h  VerifySequenceComplete_fp.h  (+1 more)
libtpms/src/tpm2/crypto/: CryptMlDsa_fp.h  CryptMlKem_fp.h
libtpms/src/tpm2/crypto/openssl/: CryptMlDsa.c  CryptMlKem.c
libtpms/tests/: nvram_offsets.c
patches/: README.md
swtpm/src/swtpm_setup/: swtpm.c  swtpm.h  swtpm_setup.c
tests/compliance/: cross-check-report.md  run_wolftpm_runtime_xcheck.sh  v185_compliance.sh  v185_wolftpm_compliance.sh
tests/crossval/: CMakeLists.txt  README.md
tests/crossval/include/: kat_loader.h  p11_helper.h
tests/crossval/src/: kat_loader.c  p11_helper.c  test_pqc_crossval.c  test_pqc_phase3.c  test_tpm_roundtrip.c  tpm_bench.c
